gforge (3.1-2+1) unstable; urgency=low

  * 

 -- Roland Mas <lolando@debian.org>  Mon, 27 Oct 2003 10:43:02 +0100

gforge (3.1-2) unstable; urgency=low

  * [Roland] Fixed install-db.sh and its "cannot create user : already
    exists" bug.

 -- Roland Mas <lolando@debian.org>  Mon, 27 Oct 2003 10:35:09 +0100

gforge (3.1-1) unstable; urgency=low

  * New upstream release.
  * [Roland] Patch #558 from Patrick McFarland to fix hardwiring problem
    in install-db.sh.
  * [Roland] Patch #561 from Patrick McFarland to fix "access to *'" bug
    in install-ldap.sh.
  * [Roland] Fixed a few occurences of SF in the Debconf templates (Gforge
    bug #555).

 -- Roland Mas <lolando@debian.org>  Sun, 26 Oct 2003 23:01:26 +0100

gforge (3.0-9) unstable; urgency=low

  * [Roland] New CVS snapshot, including fix for a bug that prevented
    e-mails to be sent with the passwords for new mailing-lists at their
    creation.

 -- Roland Mas <lolando@debian.org>  Fri, 10 Oct 2003 12:23:09 +0200

gforge (3.0-8) unstable; urgency=low

  * [Roland] Fixed redirection URL for Mailman.
  * [Roland] Made the create-vhosts cronjob silent.
  * [Roland] Removed duplicate colon from PHP script, it belongs in the
    *.tab files (closes: #212213).
  * [Roland] Fixed -request alias for Mailman (closes: #213160).
  * [Roland] Index page is now customisable (in
    /etc/gforge/custom/index_std.php) (and the default version differs
    from the gforge.org home page).  Patch from Francisco Gimeno.
  * [Roland] Fixed images alias for Mailman (closes: #213052).

 -- Roland Mas <lolando@debian.org>  Mon,  6 Oct 2003 16:27:38 +0200

gforge (3.0-7) unstable; urgency=low

  * [Roland] Added 20030822.sql.
  * [Roland] Added scripts to generate a /var/lib/gforge/etc/httpd.vhosts
    file from the database and use that, so projects can use virtual hosts
    other than <projectname>.<domainname>.  Added a
    /etc/gforge/templates/httpd.vhosts.template file, too.